--- a/docs/styles.css
+++ b/docs/styles.css
@@ -166,7 +166,7 @@ body, html {
   color: #C9C9D5;
 }
 #search img {
-    position: absolute; 
+    position: absolute;
     margin-top: 10px;
     width: 18px;
     margin-left: 12px;
@@ -244,7 +244,7 @@ body, html {
     line-height: 40px;
     bottom: 0;
     width: 362;
-    border: 1px solid #E8E8EF;
+    /* border: 1px solid #E8E8EF; */
     height: 67px;
     box-sizing: border-box;
     background-color: #FFF;
@@ -369,7 +369,7 @@ body, html {
     border-top: 1px solid #E8E8EF;
     width: 53px;
     height: 53px;
-    text-align: center; 
+    text-align: center;
     z-index: 10;
 }
 #closecard img {
@@ -580,7 +580,7 @@ transition: all .3s cubic-bezier(.05,.03,.35,1);
     width: 28px;
     height: 28px;
     border-radius: 5px;
-    text-align: center; 
+    text-align: center;
     background-color: #FFF;
     transition: all .3s cubic-bezier(.05,.03,.35,1);
     z-index: 10;
@@ -636,5 +636,5 @@ transition: all .3s cubic-bezier(.05,.03,.35,1);
 @media only screen and (max-width: 560px) {
     #names {
         display: none;
-    }   
+    }
 }
