--- a/src/app/index.html
+++ b/src/app/index.html
@@ -84,7 +84,8 @@
         <div id="actions" class="navdisabled">Actions</div>
         <div id="loggers" class="navdisabled">Loggers</div>
       </div>
-      <div id="blocklist">
+
+      <div id="tab-triggers" class="toolbox-panel">
         <div class="blockelem create-flowy noselect">
           <input
             type="hidden"
@@ -174,6 +175,23 @@
           </div>
         </div>
       </div>
+
+      <div id="tab-actions" class="toolbox-panel hidden">
+        <div class="blockelem create-flowy noselect">
+          <input type="hidden" name="blockelemtype" class="blockelemtype" value="5">
+          <div class="grabme"><img src="assets/grabme.svg"></div><div class="blockin">
+            <div class="blockico"><span></span><img src="assets/database.svg"></div><div class="blocktext">                        <p class="blocktitle">New database entry</p><p class="blockdesc">Adds a new entry to a specified database</p>        </div></div></div><div class="blockelem create-flowy noselect"><input type="hidden" name="blockelemtype" class="blockelemtype" value="6"><div class="grabme"><img src="assets/grabme.svg"></div><div class="blockin">                  <div class="blockico"><span></span><img src="assets/database.svg"></div><div class="blocktext">                        <p class="blocktitle">Update database</p><p class="blockdesc">Edits and deletes database entries and properties</p>        </div></div></div><div class="blockelem create-flowy noselect"><input type="hidden" name="blockelemtype" class="blockelemtype" value="7"><div class="grabme"><img src="assets/grabme.svg"></div><div class="blockin">                  <div class="blockico"><span></span><img src="assets/action.svg"></div><div class="blocktext">                        <p class="blocktitle">Perform an action</p><p class="blockdesc">Performs or edits a specified action</p>        </div></div></div><div class="blockelem create-flowy noselect"><input type="hidden" name="blockelemtype" class="blockelemtype" value="8"><div class="grabme"><img src="assets/grabme.svg"></div><div class="blockin">                  <div class="blockico"><span></span><img src="assets/twitter.svg"></div><div class="blocktext">                        <p class="blocktitle">Make a tweet</p><p class="blockdesc">Makes a tweet with a specified query</p>        </div></div></div>
+      </div>
+
+      <div id="tab-loggers" class="toolbox-panel hidden">
+        <div class="blockelem create-flowy noselect">
+          <input type="hidden" name="blockelemtype" class="blockelemtype" value="9">
+          <div class="grabme">
+            <img src="assets/grabme.svg"></div>
+            <div class="blockin">                  <div class="blockico"><span></span><img src="assets/log.svg"></div><div class="blocktext">                        <p class="blocktitle">Add new log entry</p><p class="blockdesc">Adds a new log entry to this project</p>        </div></div></div><div class="blockelem create-flowy noselect"><input type="hidden" name="blockelemtype" class="blockelemtype" value="10"><div class="grabme"><img src="assets/grabme.svg"></div><div class="blockin">                  <div class="blockico"><span></span><img src="assets/log.svg"></div><div class="blocktext">                        <p class="blocktitle">Update logs</p><p class="blockdesc">Edits and deletes log entries in this project</p>        </div></div></div><div class="blockelem create-flowy noselect"><input type="hidden" name="blockelemtype" class="blockelemtype" value="11"><div class="grabme"><img src="assets/grabme.svg"></div><div class="blockin">                  <div class="blockico"><span></span><img src="assets/error.svg"></div><div class="blocktext">                        <p class="blocktitle">Prompt an error</p><p class="blockdesc">Triggers a specified error</p>        </div></div></div>
+      </div>
+
+
       <div id="footer">
         <a href="https://github.com/DenysVuika/flowy" target="_blank">GitHub</a>
         <span>·</span>
@@ -185,7 +203,7 @@
           <p>by</p>
           Denys Vuika</a
         >
-      </div>
+      </div id="tab">
     </div>
     <div id="propwrap">
       <div id="properties">
